[project]
name = "vggsfm"
version = "2.0.0"
authors = [{ name = "Jianyuan Wang" }]
description = "A package for the VGGSfM project."
readme = { file = "README.md", content-type = "text/markdown" }
urls = { homepage = "https://github.com/facebookresearch/vggsfm.git" }
requires-python = ">=3.10"
dependencies = [
    "hydra-core (>=1.3.2,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "visdom (>=0.2.4,<0.3.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "imageio[ffmpeg] (>=2.37.0,<3.0.0)",
    "gradio (>=5.34.2,<6.0.0)",
    "trimesh (>=4.6.12,<5.0.0)",
    "huggingface-hub (>=0.33.0,<0.34.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "pycolmap (>=3.11.1,<4.0.0)",
    "pyceres (>=2.4,<3.0)",
    "poselib (>=2.0.4,<3.0.0)",
    "fvcore (>=0.1.5.post20221221,<0.2.0)",
    "iopath (>=0.1.10,<0.2.0)",
    "torch (==2.7.0+cu126) ; extra != 'cpu'",
    "torchvision (==0.22.0+cu126) ; extra != 'cpu'",
    "xformers (==0.0.30) ; extra != 'cpu'",
]

[project.optional-dependencies]
cpu = [
    "torch (==2.7.0+cpu)",
    "torchvision (==0.22.0+cpu)",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
torch = [
    { markers = "extra == 'cpu'", source = "pytorch-cpu" },
    { markers = "extra != 'cpu'", source = "pytorch-cuda" },
]
torchvision = [
    { markers = "extra == 'cpu'", source = "pytorch-cpu" },
    { markers = "extra != 'cpu'", source = "pytorch-cuda" },
]
xformers = [
    { markers = "extra != 'cpu'", source = "pytorch-cuda" },
]
lightglue = { path = "dependency/LightGlue", develop = true }

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"

[build-system]
requires = ["setuptools", "poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
